# Robomaniak

./: .gitignore  CR_Assignment2.txt  Dockerfile  Doxyfile  README.md  README_robot.md  README_turtle.md  Robot.md  cyclonedds.xml  melody_generator.py  metrics.json
coverage/: index-sort-f.html  index-sort-l.html  index.CMakeCCompilerId.c.086f3337b13c892c9466127806274bc6.html  index.CMakeCCompilerId.c.09d94ea9034f020dc121d49d59e13b1a.html  index.CMakeCCompilerId.c.3223883170f2087c5643195a3df18c02.html  index.CMakeCCompilerId.c.7f647df09b5369795f1447e13d0f787f.html  index.CMakeCCompilerId.c.8ea1fc6fea046cbd370810e5c5df975a.html  index.CMakeCCompilerId.c.d2a90e75816ee39a2355966fc1ca7719.html  index.CMakeCCompilerId.c.dfd2284777190d6be69475d0fc1f2500.html  index.CMakeCCompilerId.c.e1d4e1d3e294a0329dc3fc475cd7744d.html  index.CMakeCCompilerId.c.fa5170ace6f31ec951ee368a9b830f2b.html  index.CMakeCXXCompilerId.cpp.02b82885d4eba2524d6736ec6a3d9686.html  index.CMakeCXXCompilerId.cpp.094e485c15fb144b7a3b52978332158a.html  index.CMakeCXXCompilerId.cpp.714f1d3f7adb312781ba6a7d6f19e0f3.html  index.CMakeCXXCompilerId.cpp.73eda4328b3cad31ff9b0962cd780ef9.html  index.CMakeCXXCompilerId.cpp.92c380e27e904db1b247da2a3f3f359c.html  index.CMakeCXXCompilerId.cpp.b56bdaf55efbb5a40c48278795ba8076.html  index.CMakeCXXCompilerId.cpp.b5d24deaae62da67b0b001c79724fdea.html  index.CMakeCXXCompilerId.cpp.c3c7d1a46393f81fb5201a72a11540b2.html  index.CMakeCXXCompilerId.cpp.df73d7911dd65c274fc65249c8f10b90.html  index._draw_boundaries_s.c.4faae2bf5782f8b88e21699130c1f445.html  index._draw_square_s.c.071ebb2c7f26570d5169b21d09958b17.html  index._draw_square_s.c.f954e2863d4ec3188d8e6249f00e0523.html  index._robot_square_interfaces_s.ep.rosidl_typesupport_c.c.6caca1eb73d707eeca377932d9fdfe33.html  index._robot_square_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c.b996dc77aab90e3b59e2944472801d65.html  index._robot_square_interfaces_s.ep.rosidl_typesupport_introspection_c.c.9d7fcabcd280ea7a9f20fc01f0ff5882.html  index._turtle_boundaries_interfaces_s.ep.rosidl_typesupport_c.c.49d29ff6f3c8ce7d37bfc1f0d33d934a.html  index._turtle_boundaries_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c.dc1412fcd6b35afa5326160bb04c2264.html  index._turtle_boundaries_interfaces_s.ep.rosidl_typesupport_introspection_c.c.603c0094f0a0c6200b7ff01fc05177f9.html  index._turtle_square_interfaces_s.ep.rosidl_typesupport_c.c.f278dfb7f7fd2dae7d3c42242b42d761.html  index._turtle_square_interfaces_s.ep.rosidl_typesupport_fastrtps_c.c.f605185adf7030a9a0a500f70351ceaf.html  index._turtle_square_interfaces_s.ep.rosidl_typesupport_introspection_c.c.2d65dd6c7720d67423063df645cb0b8a.html  index.bt_manager_node.cpp.3ce76a5c4476aabd6eede66133fef3ce.html  index.bt_manager_node.hpp.db195c226b4ef69a366f185b9434ec7d.html  index.detection_node.cpp.b9a50fcd56e56a247b050b4ad9da2299.html  index.draw_boundaries__description.c.d49ee365953beeb9132889bb6eb89131.html  index.draw_boundaries__functions.c.04aa7575f5531f4f09873f587249a559.html  index.draw_boundaries__struct.hpp.21e9c629f407bc392d30ae4448821d8b.html  index.draw_boundaries__struct.hpp.429804d8bc4909dc1cf61ed8c499dc35.html  index.draw_boundaries__type_support.c.5d6c118b18cd7e9a0fa2b7013391c270.html  (+41 more)
doxygen/: README_8md.html  Readme_8md.html  SRS_8md.html  annotated.html  approach__config_8hpp.html  approach__config_8hpp__dep__incl.map  approach__config_8hpp__dep__incl.md5  approach__config_8hpp__incl.map  approach__config_8hpp__incl.md5  approach__config_8hpp_source.html  approach__phase_8hpp.html  approach__phase_8hpp__dep__incl.map  (+609 more)
ros2_ws/src/robot_vision/: CMakeLists.txt  Readme.md  SRS.md  package.xml
ros2_ws/src/robot_vision/include/robot_vision/: bt_manager_node.hpp  follow_node.hpp  video_node.hpp  yolo_detector.hpp
ros2_ws/src/robot_vision/src/: bt_manager_node.cpp  detection_node.cpp  follow_node.cpp  video_node.cpp  yolo_detector.cpp
ros2_ws/src/turtle_drawing_boundaries/: CMakeLists.txt  package.xml
ros2_ws/src/turtle_drawing_boundaries/launch/: draw_boundaries.launch.py  draw_boundaries_with_keyboard.launch.py
ros2_ws/src/turtle_drawing_boundaries/src/: turtle_boundaries.cpp  turtle_boundaries.hpp  turtle_boundaries_keyboard.cpp
src/robot_audio_pipeline/: CMakeLists.txt  README.md  package.xml
src/robot_audio_pipeline/config/: audio_pipeline.yaml
src/robot_audio_pipeline/include/robot_audio_pipeline/: portaudio_input.hpp  snowboy_c_bridge.h  snowboy_engine.hpp
src/robot_audio_pipeline/launch/: audio_pipeline.launch.py
src/robot_audio_pipeline/src/: audio_pipeline_node.cpp  portaudio_input.cpp  snowboy_c_bridge.cpp  snowboy_engine.cpp  voice_command_node.cpp
src/robot_vision/: CMakeLists.txt  Readme.md  package.xml
src/robot_vision/config/: bt_manager_approach.yaml  bt_manager_tree.xml  camera_intrinsics.yaml  sound_sequences.yaml
src/robot_vision/include/robot_vision/: bt_manager_node.hpp  detection_node.hpp  dock_calibration_node.hpp  dock_detector_node.hpp  follow_node.hpp  led_manager.hpp  listen_node.hpp  teleop_node.hpp  video_node.hpp
src/robot_vision/include/robot_vision/bt_utils/: approach_config.hpp  approach_phase.hpp  bt_context.hpp  pose_2d.hpp  robot_mode.hpp
src/robot_vision/include/robot_vision/bt_utils/nodes/: follow_action.hpp  is_mode.hpp  listen_action.hpp  teleop_action.hpp
src/robot_vision/include/robot_vision/librairies/: sound_manager.hpp  yolo_detector.hpp
src/robot_vision/launch/: robot_complet.launch.py
src/robot_vision/src/: bt_manager_node.cpp  detection_node.cpp  dock_calibration_node.cpp  dock_detector_node.cpp  follow_node.cpp  led_manager.cpp  listen_node.cpp  sound_manager.cpp  teleop_node.cpp  video_node.cpp  yolo_detector.cpp
src/robot_vision/src/bt_utils/nodes/: follow_action.cpp  is_mode.cpp  listen_action.cpp  teleop_action.cpp
src/robot_vision/src/librairies/: led_manager.cpp  sound_manager.cpp  yolo_detector.cpp
src/robot_vision/test/: test_yolo_detector.cpp
src/robot_vision/test/python/: test_follow_node.py
turtle/turtle_fsm_controller/: CMakeLists.txt
turtle/turtle_fsm_controller/src/: turtle_fsm_node.hpp
(+566 files in other folders)
