<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
        schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_vision</name>
    <version>0.1.0</version>
    <description>
        Pipeline de détection vidéo pour le robot iRobot Create 3.
        Capture un flux MJPEG depuis un smartphone, détecte les humains
        avec YOLOv8 (ONNX Runtime) et contrôle les LEDs du robot.
    </description>

    <maintainer email="todo@todo.com">Équipe Robot</maintainer>
    <license>MIT</license>

    <!-- Build -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dépendances ROS2 -->
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>vision_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>irobot_create_msgs</depend>
    <depend>behaviortree_cpp</depend>
    <depend>rclcpp_action</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>yaml-cpp</depend>

    <!-- Dépendances système -->
    <depend>libopencv-dev</depend>
    <depend>libevdev-dev</depend>
    <depend>portaudio19-dev</depend>

    <!-- Tests -->
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>